--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,9 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-  ],
+, "src/components/test-jsx.tsx"  ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "./src/views/md/*.md"
   ]
 }
